--- a/plugin.xml
+++ b/plugin.xml
@@ -20,6 +20,10 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <merges target="cordova.plugins.firebase.crashlytics" />
     </js-module>
 
+    <!--hook type="before_plugin_install" src="hooks/before_plugin_install.js" /-->
+
+    <!--js-module src="www/error-stack-parser.js" name="ErrorStackParser" /-->
+
     <platform name="ios">
         <hook type="after_plugin_install" src="hooks/ios/after_plugin_install.js" />
         <hook type="before_plugin_uninstall" src="hooks/ios/before_plugin_uninstall.js" />
@@ -45,7 +49,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     </platform>
 
     <platform name="android">
-        <preference name="FIREBASE_CORE_VERSION" default="17.0.+"/>
+        <preference name="FIREBASE_CORE_VERSION" default="16.0.+"/>
 
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="FirebaseCrash">
@@ -64,7 +68,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <source-file src="src/android/FirebaseCrashPlugin.java" target-dir="src/by/chemerisuk/cordova/firebase/" />
 
         <dependency id="cordova-support-android-plugin" version="~1.0.0"/>
-        <dependency id="cordova-support-google-services" version="^1.3.0"/>
+        <dependency id="cordova-support-google-services" version="^1.2.0"/>
 
         <framework src="src/android/build.gradle" custom="true" type="gradleReference" />
         <framework src="com.google.firebase:firebase-core:$FIREBASE_CORE_VERSION" />
